# python-cmake-custom-extension

./: CMakeLists.txt  examplemodule.cxx  setup.py
example/: CMakeLists.txt  __init__.py  _example.cxx
